# fantasy-data

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: coaching_staff_2024.json  coaching_staff_2025.json  coaching_staff_export.csv  coaching_staff_historical.json  pff_grades_2025.csv
qualitative-dev/: data_enhancement_plan.md  data_gathering_todo.md  trust_calibration_brainstorm.md
schema/: create_tables.sql  create_views.sql
scripts/: build_coaching_history.py  convert_pff_json.py
src/fantasy_data/: __init__.py  cli.py  db.py  models.py  standardize.py
src/fantasy_data.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/fantasy_data/compute/: compute_baselines.py  compute_competition.py  compute_trust_weights.py
src/fantasy_data/ingest/: id_resolver.py  ingest_historical.py  ingest_historical_adp.py  ingest_nflverse.py  ingest_ngs.py  ingest_pff.py  ingest_pff_bulk.py  ingest_rankings.py  ingest_reception_perception.py  pipeline_id_map.py
src/fantasy_data/reports/: adp_divergence.py  player_profile.py  rankings.py  rankings_variance.py  trust_flags.py
src/fantasy_data/viz/: __init__.py  adp_divergence.py  correlation_heatmap.py  opportunity_dist.py  player_profile.py  rankings_variance.py  theme.py  trust_overview.py
tests/: conftest.py  test_compute.py  test_id_resolver.py  test_ingest_historical.py  test_ingest_nflverse.py  test_ingest_pff.py  test_ingest_rankings.py  test_models.py  test_reports.py  test_standardize.py  test_viz.py
