[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
fantasy-pipeline = { path = "../fantasy_data_pipeline", editable = true }

[project]
name = "fantasy-data"
version = "0.1.0"
description = "Fantasy football data model, ETL, and edge identification for the quant-edge platform"
readme = "README.md"
authors = [
    {name = "Henry Marsh"},
]
requires-python = ">=3.13"
dependencies = [
    "fantasy-pipeline",
    "sqlalchemy>=2.0.0",
    "click>=8.1.0",
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "nfl_data_py>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]
viz = [
    "plotly>=5.18.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "kaleido>=0.2.1",
]

[project.scripts]
fantasy-data = "fantasy_data.cli:cli"

[project.urls]
Repository = "https://github.com/henrymarsh/fantasy-data"
